cambios en los links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <nav id="nav" class="nav-bar">
-  <div class="conteiner-header">
-      <img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsjemEJ16etr3vEyyUBXrsw4Y16K7z2ep4mg&usqp=CAU" alt="logo">
-      <h1 class="title">POKEDEX</h1>
+  <div>
+      <a class="conteiner-header" href="../index.html">
+        <img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsjemEJ16etr3vEyyUBXrsw4Y16K7z2ep4mg&usqp=CAU" alt="logo">
+        <h1 class="title">POKEDEX</h1></a>
   </div>
   <div class="container-redes">
       <div class="respmenu">
-          <input type="checkbox">
+          <input class="btn-Hamburger" type="checkbox">
           <i class="fas fa-bars"></i>
           <i class="fas fa-times"></i>
           <nav>
