--- a/src/app/single/single.component.html
+++ b/src/app/single/single.component.html
@@ -12,13 +12,13 @@
                 </td>
                 <td>{{poke.tipo}}</td>
                 <td>
-                    <span *ngFor="let abil of poke.abilities" class="ms-2">{{abil.ability.name}} </span>
+                    <span *ngFor="let abil of poke.abilities" class="ms-2">{{abil.ability.name}}, </span>
                 </td>
                 <td>
-                    <span *ngFor="let game of poke.game_indices" class="ms-2">{{game.version.name}} </span>
+                    <span *ngFor="let game of poke.game_indices" class="ms-2">{{game.version.name}}, </span>
                 </td>
                 <td>
-                    <span *ngFor="let move of poke.moves" class="ms-2">{{move.move.name}} </span>
+                    <span *ngFor="let move of poke.moves" class="ms-2">{{move.move.name}}, </span>
                 </td>
                 <td><img src="{{poke.image}}" alt="{{poke.name}}"></td>
                 <td><img src="{{poke.back_image}}" alt="{{poke.name}}"></td>
