--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<nav id="nav" class="nav-bar">
-  <div>
-      <a class="conteiner-header" href="../index.html">
-        <img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsjemEJ16etr3vEyyUBXrsw4Y16K7z2ep4mg&usqp=CAU" alt="logo">
-        <h1 class="title">POKEDEX</h1></a>
-  </div>
-  <div class="container-redes">
-      <div class="respmenu">
-          <input class="btn-Hamburger" type="checkbox">
-          <i class="fas fa-bars"></i>
-          <i class="fas fa-times"></i>
-          <nav>
-              <ul class="list_redes">
-                  <li class="red"><a target="_blank" href="https://www.youtube.com/"><i class="icono-youtube fab fa-youtube"></i></a></li>
-                  <li class="red"><a target="_blank" href="https://www.facebook.com/"><i class="icono-facebook fab fa-facebook"></i></a></li>
-                  <li class="red"><a target="_blank" href="https://twitter.com/"><i class="icono-twiter fab fa-twitter-square"></i></a></li>
-              </ul>
-          </nav>
-        </div>
-  </div>
-</nav>
+<app-header></app-header>
 <div class="first_container" id="first_container">
 
 <div class="busqueda">
