--- a/src/styles.css
+++ b/src/styles.css
@@ -9,14 +9,15 @@ body{
 .nav-bar{
     width: 100%;
     position: fixed;
-    background-color: rgb(11,46,63);
+    background-color: rgb(119,172,188);
     margin-top: -50px;
     z-index: 1;
     display: flex;
+    border-bottom: 1px solid #456789;
 }
 
 .footer{
-    background-color: rgb(11,46,63);
+    background-color: rgb(119,172,188);
     height: 70px;
     width: 102%;
     margin-left: -18px;
@@ -165,11 +166,12 @@ caption {
     text-decoration: none;
     display: block;
     padding: 10px 20px;
-    border-bottom: 2px solid #456789;
+    border-bottom: 1px solid #456789;
     max-width: 200px;
-    background: #234567;
+    background: rgb(119,172,188);
     font-variant: small-caps;
     text-shadow: 1px 1px black;
+    border: 1px solid #456789;
   }
 
   .respmenu input[type="checkbox"], .respmenu .fa-bars, .respmenu .fa-times {
@@ -195,7 +197,7 @@ caption {
   .respmenu {
     color: white;
     position: relative; 
-    background: rgb(11,46,63);
+    background: rgb(119,172,188);
     min-height: 48px;
     width: 110px;
     bottom: 10px;
