se migra a angular 19

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,37 +2,41 @@
 <app-header></app-header>
 <div class="first_container" id="first_container">
 
-<div class="busqueda">
-  <input class="txtSearch" [(ngModel)]="busqueda" type="text" placeholder="Buscar Pokemon..." />
-  <button class="btn-search btn-default btn-sm" (click)="search()" type="submit">Buscar</button>
-  <div id="mensaje" style="display: none;" class="alert alert-success alert-dismissable">
-    <strong>¡Aviso!</strong>
+    <div class="busqueda">
+        <input class="txtSearch" [(ngModel)]="busqueda" type="text" placeholder="Buscar Pokemon..." />
+        <button class="btn-search btn-default btn-sm" (click)="search()" type="submit">Buscar</button>
+        <div id="mensaje" style="display: none;" class="alert alert-success alert-dismissable">
+            <strong>¡Aviso!</strong>
+        </div>
     </div>
-</div>
-<table class="table table-hover table-condensed table-responsive">
-    <thead>
-        <tr>
-            <th *ngFor="let title of titles">{{title}}</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let poke of pokemons; let i = index">
-            <td>{{poke.id}}</td>
-            <td><span class="ms-2">{{poke.name}}</span>
-            </td>
-            <td><span *ngFor="let type of poke.tipo" class="">{{type}}</span></td>
-            <td><a (click)="searchLink(poke.id)" routerLink="single/{{poke.id}}"><img class="poke-picture-list" src="{{poke.image}}" alt="{{poke.name}}"></a></td>
-        </tr>
-    </tbody>
-</table>
-<div class="container_btn">
-    <button hidden="true" id="back" class="btn-back btn-default btn-lg" type="button"><i class="fas fa-arrow-left"></i> Regresar</button>
-  <button id="prev" class="btn-back btn-default btn-lg" (click)="prevPage()" type="button"><i class="fas fa-arrow-left"></i> Anterior</button>
-  <button id="next" class="btn-back btn-default btn-lg" (click)="nextPage()" type="button" value="Next-->">Sigiente <i class="fas fa-arrow-right"></i></button>
-</div>
+    <table class="table table-hover table-condensed table-responsive">
+        <thead>
+            <tr>
+                <th *ngFor="let title of titles">{{title}}</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let poke of pokemons; let i = index">
+                <td>{{poke.id}}</td>
+                <td><span class="ms-2">{{poke.name}}</span>
+                </td>
+                <td><span *ngFor="let type of poke.tipo" class="">{{type}}</span></td>
+                <td><a [routerLink]="['/single', poke.id]"><img class="poke-picture-list" src="{{poke.image}}"
+                            alt="{{poke.name}}"></a></td>
+            </tr>
+        </tbody>
+    </table>
+    <div class="container_btn">
+        <button hidden="true" id="back" class="btn-back btn-default btn-lg" type="button"><i
+                class="fas fa-arrow-left"></i> Regresar</button>
+        <button id="prev" class="btn-back btn-default btn-lg" (click)="prevPage()" type="button"><i
+                class="fas fa-arrow-left"></i> Anterior</button>
+        <button id="next" class="btn-back btn-default btn-lg" (click)="nextPage()" type="button"
+            value="Next-->">Sigiente <i class="fas fa-arrow-right"></i></button>
+    </div>
 
-<footer hidden="true" id="footer" class="footer">
-      <h6 class="copi">Copyright 2021 Pokedex</h6>
-</footer>
+    <footer hidden="true" id="footer" class="footer">
+        <h6 class="copi">Copyright 2021 Pokedex</h6>
+    </footer>
 </div>
 <router-outlet></router-outlet>
