--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,11 @@
 <nav id="nav" class="nav-bar">
     <div>
         <a class="conteiner-header" href="../index.html">
-          <img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsjemEJ16etr3vEyyUBXrsw4Y16K7z2ep4mg&usqp=CAU" alt="logo">
-          <h1 class="title">POKEDEX</h1></a>
+            <img class="logo"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsjemEJ16etr3vEyyUBXrsw4Y16K7z2ep4mg&usqp=CAU"
+                alt="logo">
+            <h1 class="title">POKEDEX</h1>
+        </a>
     </div>
     <div class="container-redes">
         <div class="respmenu">
@@ -11,11 +14,14 @@
             <i class="fas fa-times"></i>
             <nav>
                 <ul class="list_redes">
-                    <li class="red"><a target="_blank" href="https://www.youtube.com/"><i class="icono-youtube fab fa-youtube"></i></a></li>
-                    <li class="red"><a target="_blank" href="https://www.facebook.com/"><i class="icono-facebook fab fa-facebook"></i></a></li>
-                    <li class="red"><a target="_blank" href="https://twitter.com/"><i class="icono-twiter fab fa-twitter-square"></i></a></li>
+                    <li class="red"><a target="_blank" href="https://www.youtube.com/"><i
+                                class="icono-youtube fab fa-youtube"></i></a></li>
+                    <li class="red"><a target="_blank" href="https://www.facebook.com/"><i
+                                class="icono-facebook fab fa-facebook"></i></a></li>
+                    <li class="red"><a target="_blank" href="https://twitter.com/"><i
+                                class="icono-twiter fab fa-twitter-square"></i></a></li>
                 </ul>
             </nav>
-          </div>
+        </div>
     </div>
-  </nav>
+</nav>
